# squad-system

./: .gitignore  Dockerfile  README.md  docker-compose.yml  gunicorn_config.py  pyproject.toml
config/: config.yml  logging.yml
data/: download.sh
out_infer/: pred_ans_ind_all.json  pred_ans_ind_only_ans.json  pred_ind_all.json  pred_ind_only_ans.json  stats_ans_ind_all.json  stats_ans_ind_only_ans.json  stats_ind_all.json  stats_ind_only_ans.json
squad_system/: squad_eval.py
squad_system/api/: __main__.py  api.py  auth.py  data_model.py  endpoints.py  handlers.py
squad_system/nlp/: __main__.py  entrypoints.py  utils.py
squad_system/nlp/dataset/: data_model.py  dataset.py  io.py  preprocess.py
squad_system/nlp/inference/: pipeline.py
squad_system/nlp/model/: io.py  model.py
squad_system/nlp/train/: callbacks.py  config.py  state_model.py  trainer.py
squad_system/plots/: plots.py
squad_system/utils/: logs.py
